Bug #34484: * Adjust CSS rules to integrate dijit/form/Select * Use Dojo async attribute * If UMC overview is disabled and a startup module is specified, only load AMD modules of the startup UMC module * Allow dynamic reloading of translations * Added radio button widget * Added tools.defer() * Fixed validation of Form * Fixed vertical scrolling issues with the Grid in Firefox * Allow configuration of LabelPanes via the widget property 'labelConf' * TextBox: allow dynamic changing of 'inlineLabel' * Wizard: added convenience method isPageVisible()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51954 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/site.less
+++ b/management/univention-management-console-frontend/css/site.less
@@ -325,6 +325,13 @@ div[dijitpopupparent=umcMenuHelp] {
 
 .umc .umcMainTabContainer {
 	padding: 20px 30px 10px 30px;
+
+}
+.umc .umcMainTabContainer > div > div {
+	padding: 0 !important;
+	margin: 0 !important;
+	top: 0 !important;
+	left: 0 !important;
 }
 
 /* LiveSearchSidebar */
